crates/jarl-cli/tests/integration/snapshots/integration__rules__correct_rule_selection_and_exclusion.snap
---
source: crates/jarl-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select-rules\").arg(\"any_is_na\").arg(\"--ignore-rules\").arg(\"any_duplicated\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [1:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check . --select-rules any_is_na --ignore-rules any_duplicated
