crates/jarl-cli/tests/integration/snapshots/integration__rules__select_rule_group.snap
---
source: crates/jarl-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select-rules\").arg(\"SUSP\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: all_equal
 --> test.R:3:1
  |
3 | !all.equal(x, y)
  | ---------------- `all.equal()` can return a string instead of FALSE.
  |
  = help: Wrap `all.equal()` in `isTRUE()`, or replace it by `identical()` if no tolerance is required.

Found 1 error.
1 fix is available with the `--fix --unsafe-fixes` option.

----- stderr -----

----- args -----
check . --select-rules SUSP
