crates/jarl-cli/tests/integration/snapshots/integration__rules__several_non_existing_ignored_rules.snap
---
source: crates/jarl-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--ignore-rules\").arg(\"foo,any_is_na,barbaz\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Unknown rules in `--ignore-rules`: foo, barbaz

----- args -----
check . --ignore-rules foo,any_is_na,barbaz
